syntax = "proto3";

package saloon.raft;

message AppendEntriesRequest {
	uint64 term = 1;
	string leader_id = 2;
	uint64 last_log_index = 3;
	uint64 last_log_term = 4;
	uint64 leader_commit_index = 5;
	repeated bytes entries = 6;
}

message AppendEntriesResponse {
	uint64 term = 1;
	bool success = 2;
}

message RequestVoteRequest {
	uint64 term = 1;
	string candidate_id = 2;
	uint64 last_log_index = 3;
	uint64 last_log_term = 4;
}

message RequestVoteResponse {
	uint64 term = 1;
	bool granted = 2;
}

service AppendEntriesService {
	rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

service RequestVoteService {
	rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}
